Extend test cases, readme

--- a/tox.ini
+++ b/tox.ini
@@ -18,14 +18,14 @@ setenv =
 passenv =
     *
 usedevelop = false
-deps=
+deps =
 	mock
     pytest
     pytest-cov
     coverage
     reportlab
     mako
-commands=
+commands =
     {posargs:py.test --cov=mlx.json_to_mako --cov-report=term-missing -vv tests/}
     json-to-mako -h
     json-to-mako --version
@@ -41,6 +41,7 @@ deps =
     flake8
     readme-renderer
     pygments
+    mako
 skip_install = true
 commands =
     python setup.py check --strict --metadata --restructuredtext
